--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,14 @@
 :root {
     --primary-font: 'Inter', sans-serif;
     --secondary-font: 'Macondo', cursive;
-    --primary-color: #3a2620; /* dark brown */
-    --secondary-color: #aa9581; /* light brown */
-    --highlight-color: #416a8e; /* blue */
-    --highlight-color-light: #7a9fc2; /* light blue */
+    --primary-color: #3a2620;
+    /* dark brown */
+    --secondary-color: #aa9581;
+    /* light brown */
+    --highlight-color: #416a8e;
+    /* blue */
+    --highlight-color-light: #7a9fc2;
+    /* light blue */
 }
 
 /* Global Styles */
@@ -17,12 +21,15 @@ body {
     font-family: var(--primary-font);
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: var(--secondary-font);
     color: var(--primary-color);
 }
 
-h1, h2 {
+h1,
+h2 {
     text-transform: uppercase;
 }
 
@@ -66,6 +73,13 @@ h2 {
     margin-bottom: 1.5rem;
 }
 
+/* Games library cards */
+
+#new-games .card,
+#fav-games .card {
+    border: 0;
+}
+
 /* grid visualisation CSS for testing */
 
 /* .container,
@@ -82,6 +96,7 @@ h2 {
 
 /* Medium devices (tablets, 768px and up) */
 @media screen and (min-width: 768px) {
+
     /* Make all service cards the same height for consistency */
     #services .card-body {
         min-height: 191px;
@@ -90,6 +105,7 @@ h2 {
 
 /* Large devices (desktops, 992px and up) */
 @media screen and (min-width: 992px) {
+
     /* Make all service cards the same height for consistency */
     #services .card-body {
         min-height: auto;
@@ -98,6 +114,7 @@ h2 {
 
 /* XL devices (large desktops, 1200px and up) */
 @media screen and (min-width: 1200px) {
+
     /* Make all service cards the same height for consistency */
     #services .card-body {
         min-height: 218px;
@@ -106,6 +123,7 @@ h2 {
 
 /* XXL devices (extra large desktops, 1400px and up) */
 @media screen and (min-width: 1400px) {
+
     /* Make all service cards the same height for consistency */
     #services .card-body {
         min-height: 194px;
