--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ h2 {
 
 /* grid visualisation CSS for testing */
 
-/* .container,
+.container,
 .row {
     border: 2px solid black;
 }
@@ -126,7 +126,7 @@ h2 {
 .col-12 {
     border: 2px solid white;
     background-color: lightgray;
-} */
+}
 
 /* Media Queries */
 
