--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,31 @@ h2 {
     margin-bottom: 2rem;
 }
 
+/* Buttons */
+
+.custom-button-filled {
+    border: 2px solid var(--highlight-color);
+    background-color: var(--highlight-color);
+    color: white;
+}
+
+.custom-button-filled:hover {
+    background-color: var(--secondary-color);
+    border-color: var(--secondary-color);
+    color: white;
+}
+
+.custom-button-outline {
+    color: var(--highlight-color);
+    border: 2px solid var(--highlight-color);
+    padding: 7px 25px;
+}
+
+.custom-button-outline:hover {
+    background-color: var(--highlight-color);
+    color: white;
+}
+
 /* Navbar styles */
 .navbar {
     background-color: var(--primary-color);
@@ -118,7 +143,7 @@ h2 {
 
 /* grid visualisation CSS for testing */
 
-.container,
+/* .container,
 .row {
     border: 2px solid black;
 }
@@ -126,7 +151,7 @@ h2 {
 .col-12 {
     border: 2px solid white;
     background-color: lightgray;
-}
+} */
 
 /* Media Queries */
 
