--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,6 @@ h2 {
 
 .custom-button-filled:hover {
     background-color: var(--secondary-color);
-    border-color: var(--secondary-color);
     color: white;
 }
 
@@ -147,6 +146,8 @@ h2 {
 #contact .social-links i {
     color: var(--highlight-color-light);
     font-size: 1.9rem;
+    -webkit-transition: color 0.3s ease-in-out;
+    -o-transition: color 0.3s ease-in-out;
     transition: color 0.3s ease-in-out;
 }
 
@@ -158,18 +159,6 @@ h2 {
     background-color: transparent;
 }
 
-/* grid visualisation CSS for testing */
-
-/* .container,
-.row {
-    border: 2px solid black;
-}
-
-.col-12 {
-    border: 2px solid white;
-    background-color: lightgray;
-} */
-
 /* Media Queries */
 
 /* Small screens and up */
@@ -179,7 +168,7 @@ h2 {
     }
 
     .student-discount {
-        font-size: 1 rem;
+        font-size: 1rem;
     }
 }
 
